Fix: make dock tab close button smaller (#5115)

--- a/src/renderer/components/dock/dock-tab.module.scss
+++ b/src/renderer/components/dock/dock-tab.module.scss
@@ -81,7 +81,7 @@
 .close {
   position: absolute;
   right: 0px;
-  width: 5ch;
+  width: 4ch;
   opacity: 0;
   text-align: center;
   background: linear-gradient(90deg, transparent 0%, var(--color-active) 25%);
